--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
 </script>
 </head>
 <body>
-    <div id="result">
-        <!--Position information will be inserted here-->
-    </div>
-    <button type="button" onclick="showPosition();">Show Position</button>
+    <p><button onclick="geoFindMe()">Show my location</button></p>
+    <div id="out"></div>
+    <script src="test.js"></script>
 </body>
 </html>
