update geolocalization improvements

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </script>
 </head>
 <body>
-    <p><button onclick="geoFindMe()">Show my location</button></p>
+    <p><button id="findme">Show my location</button></p>
     <div id="out"></div>
     <script src="test.js"></script>
 </body>
