--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <title>Get Current Position</title>
 <script>
     function showPosition() {
@@ -17,8 +19,8 @@
 </script>
 </head>
 <body>
-    <p><button id="findme">Show my location</button></p>
-    <div id="out"></div>
+    <p><button id="findme" style="font-size: 20px;">Show my location</button></p>
+    <div id="out" style="font-size: 20px;"></div>
     <script src="test.js"></script>
 </body>
 </html>
